--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "ts-proto": "1.83.1",
     "typedoc": "^0.20.35",
     "typedoc-plugin-no-inherit": "^1.2.0",
-    "typescript": "~4.2.3",
+    "typescript": "^4.2.4",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1"
